--- a/Website/Resources.html
+++ b/Website/Resources.html
@@ -27,14 +27,21 @@
         </div>
       </div>
     </nav>
-    <h1>Resources</h1>
-    <h3 >If you want to learn more about climate change, look at the links below!</h3>
+    <h1 style = "margin-bottom: 30px;">Resources</h1>
      <div class="list-container">
       <ul>
-        <li><a href="https://www.w3.org/">One</a></li>
-        <li><a href="https://www.w3.org/">Two</a></li>
-        <li><a href="https://www.w3.org/">Three</a></li>
-        <li><a href="https://www.w3.org/">Four</a></li>
+        <h5 >Further Information on Climate Change</h3>
+        <li><a href="https://climatevulnerabilityindex.org/">Climate Vulnerability Index</a></li>
+        <li><a href="https://climate.uw.edu/our-work/wasco-tools/trend-tool/">Washington State Climate Office</a></li>
+        <li><a href="https://wacoastalnetwork.com/research-and-tools/slr-visualization/">Coastal Hazards Resilience Network</a></li>
+        <h5 >What to Do if You are Affected</h3>
+        <li><a href="https://toolkit.climate.gov/overview-steps">US Climate Resilience Toolkit</a></li>
+        <li><a href="https://www.georgetownclimate.org/adaptation/toolkits/managed-retreat-toolkit/introduction.html">Managed Retreat Toolkit</a></li>
+        <li><a href="https://planning-org-uploaded-media.s3.amazonaws.com/publication/download_pdf/hazard-mitigation-policy-guide.pdf">Hazard Mitigation Policy Guide</a></li>
+        <h5 >Ways You Can Get Involved to Stop Climate Change!</h3>
+        <li><a href="https://www.un.org/en/actnow/ten-actions">United Nations Act Now</a></li>
+        <li><a href="https://www.epa.gov/climate-change/what-you-can-do-about-climate-change">United States Environmental Protection Agency</a></li>
+        <li><a href="https://www.unep.org/news-and-stories/story/10-ways-you-can-help-fight-climate-crisis">UN Environment Programme</a></li>
       </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
