--- a/Website/Graph.html
+++ b/Website/Graph.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +10,7 @@
     <title>Data</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg" id = "nav">
+    <nav class="navbar navbar-expand-lg" id="nav">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"> 
           <img src="x.png" alt="Logo" width="100" height="57" class="d-inline-block align-text-top"> 
@@ -20,22 +21,38 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item px-2">
-              <a class="nav-link" style = "color: #000000" aria-current="page" href="Graph.html">Data</a>
+              <a class="nav-link" style="color: #000000" aria-current="page" href="Graph.html">Data</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link active" style = "color: #a2a2a2" href="Resources.html">Resources</a>
+              <a class="nav-link active" style="color: #a2a2a2" href="Resources.html">Resources</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+
     <h1>Data</h1>
     <div class="placeholder"></div>
-    <div id="myoutput"></div>
-    <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    <!-- Embed Streamlit app -->
+    <div id="myoutput">
+      <iframe
+        src="https://zgs-climate-2.streamlit.app/"
+        width="100%"
+        height="800"
+        frameborder="0"
+        allowfullscreen
+      ></iframe>
+    </div>
+
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <footer>
+      <p id="footend">Creators: Jackleen, Jess, Emily<br></p>
+    </footer>
   </body>
-  <footer>
-    <p id="footend">Creators: Jackleen, Jess, Emily<br>
-</footer>
 </html>
